[workspace]

members = [
    "base_layer/chat_ffi",
    "base_layer/core",
    "base_layer/common_types",
    "base_layer/contacts",
    "base_layer/key_manager",
    "base_layer/mmr",
    "base_layer/p2p",
    "base_layer/service_framework",
    "base_layer/wallet",
    "base_layer/wallet_ffi",
    "base_layer/tari_mining_helper_ffi",
    "clients/rust/base_node_grpc_client",
    "clients/rust/wallet_grpc_client",
    "comms/core",
    "comms/dht",
    "comms/rpc_macros",
    "common_sqlite",
    "infrastructure/libtor",
    "infrastructure/metrics",
    "infrastructure/shutdown",
    "infrastructure/storage",
    "infrastructure/tari_script",
    "infrastructure/test_utils",
    "buildtools/deps_only",
    "applications/minotari_node",
    "applications/minotari_console_wallet",
    "applications/minotari_app_utilities",
    "applications/minotari_merge_mining_proxy",
    "applications/minotari_miner",
    "applications/minotari_ledger_wallet/comms",
    "integration_tests",
    "hashing",
]

# Add here until we move to edition=2021
resolver = "2"

[profile.release]
# Shutdown when panicking so we can see the error, specifically for the wallet
panic = "abort"
# By default, Rust will wrap an integer in release mode instead of throwing the overflow error
# seen in debug mode. Panicking at this time is better than silently using the wrong value.
overflow-checks = true

[patch.crates-io]
liblmdb-sys = { git = "https://github.com/tari-project/lmdb-rs", tag = "0.7.6-tari.1" }
