[workspace.package]
authors = ["The Tari Development Community"]
repository = "https://github.com/tari-project/tari"
license = "BSD-3-Clause"
version = "1.7.0-pre.0"
edition = "2021"

[workspace]
members = [
    "base_layer/chat_ffi",
    "base_layer/core",
    "base_layer/common_types",
    "base_layer/contacts",
    "base_layer/key_manager",
    "base_layer/mmr",
    "base_layer/p2p",
    "base_layer/service_framework",
    "base_layer/wallet",
    "base_layer/wallet_ffi",
    "base_layer/tari_mining_helper_ffi",
    "clients/rust/base_node_grpc_client",
    "clients/rust/wallet_grpc_client",
    "common_sqlite",
    "infrastructure/libtor",
    "infrastructure/metrics",
    "infrastructure/shutdown",
    "infrastructure/storage",
    "infrastructure/tari_script",
    "infrastructure/test_utils",
    "buildtools/deps_only",
    "applications/minotari_node",
    "applications/minotari_console_wallet",
    "applications/minotari_app_utilities",
    "applications/minotari_merge_mining_proxy",
    "applications/minotari_miner",
    "applications/minotari_ledger_wallet/comms",
    "applications/minotari_ledger_wallet/common",
    "integration_tests",
    "hashing",
    "network/core",
    "network/swarm",
    "network/rpc_framework",
    "network/rpc_macros",
    "network/libp2p-peersync",
    "network/libp2p-substream"
]

# Add here until we move to edition=2021
resolver = "2"

[profile.release]
# By default, Rust will wrap an integer in release mode instead of throwing the overflow error
# seen in debug mode. Panicking at this time is better than silently using the wrong value.
overflow-checks = true

[patch.crates-io]
liblmdb-sys = { git = "https://github.com/tari-project/lmdb-rs", tag = "0.7.6-tari.1" }

[workspace.dependencies]
tari_network = { path = "network/core" }
tari_rpc_framework = { path = "network/rpc_framework" }
tari_rpc_macros = { path = "network/rpc_macros" }
tari_swarm = { path = "network/swarm" }
tari_crypto = "0.21.0"

libp2p-messaging = { path = "network/libp2p-messaging" }
libp2p-peersync = { path = "network/libp2p-peersync" }
libp2p-substream = { path = "network/libp2p-substream" }
proto_builder = { path = "network/proto_builder" }

tari_shutdown = { path = "infrastructure/shutdown" }
tari_metrics = { path = "infrastructure/metrics" }

# Use Tari's libp2p fork that adds support for Schnorr-Ristretto
libp2p-identity = { git = "https://github.com/tari-project/rust-libp2p.git", rev = "3d918ccbf5ae1cbec0815a2156079b0fba4ba558" }
libp2p = { git = "https://github.com/tari-project/rust-libp2p.git", rev = "3d918ccbf5ae1cbec0815a2156079b0fba4ba558", default-features = false }
multiaddr = { git = "https://github.com/tari-project/rust-libp2p.git", rev = "3d918ccbf5ae1cbec0815a2156079b0fba4ba558" }

anyhow = "1.0.89"
async-trait = "0.1.83"
log = "0.4.22"
rand = "0.8.5"
thiserror = "1.0.64"
tokio = "1.40.0"
bitflags = "2.6.0"
bytes = "1.7.2"
futures = "0.3.30"
once_cell = "1.20.1"
pin-project = "1.1.5"
prost = "0.13.3"
prost-build = "0.13.3"
tokio-util = "0.7.12"
tower = "0.4"
tracing = "0.1.40"
sha2 = "0.10"
futures-bounded = "0.2.4"
smallvec = "2.0.0-alpha.7"
async-semaphore = "1.2.0"
asynchronous-codec = "0.7.0"
blake2 = "0.10"
quick-protobuf = "0.8.1"
humantime = "2.1.0"
quick-protobuf-codec = "0.3.1"
proc-macro2 = "1.0.86"
quote = "1.0.37"
syn = "1.0.109"
