[package]
name = "tari_common"
authors = ["The Tari Development Community"]
description = "Utilities and features for the Tari domain layer, shared across both Base and Digital Asset layers."
repository = "https://github.com/tari-project/tari"
homepage = "https://tari.com"
readme = "README.md"
license = "BSD-3-Clause"
version.workspace = true
edition.workspace = true

[features]
build = ["toml", "prost-build"]

[dependencies]
tari_crypto = { workspace = true }
tari_features = { workspace = true }

anyhow = "1.0.53"
blake2 = "0.10"
config = { version = "0.13.0", default_features = false, features = ["toml"] }
dirs-next = "1.0.2"
log = "0.4.8"
log4rs = { version = "1.3.0", default_features = false, features = ["config_parsing", "threshold_filter", "yaml_format"] }
multiaddr = { version = "0.14.0" }
path-clean = "0.1.0"
prost-build = { version = "0.11.9", optional = true }
serde = { version = "1.0.106", default_features = false }
serde_json = "1.0.51"
serde_yaml = "0.9.17"
sha2 = "0.10"
structopt = { version = "0.3.13", default_features = false }
tempfile = "3.1.0"
thiserror = "1.0.29"
toml = { version = "0.5", optional = true }

[dev-dependencies]
tari_test_utils = { workspace = true }
toml = "0.5.8"

[build-dependencies]
tari_features = { workspace = true }
