[package]
name = "tari_common_sqlite"
authors = ["The Tari Development Community"]
description = "Tari cryptocurrency wallet library"
license = "BSD-3-Clause"
version = "0.48.0-pre.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "2.0.3", features = ["sqlite", "r2d2"] }
log = "0.4.6"
thiserror = "1.0.26"
