[package]
name = "tari_common_sqlite"
authors = ["The Tari Development Community"]
description = "Tari cryptocurrency wallet library"
license = "BSD-3-Clause"
version = "1.0.0-pre.11a"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tari_utilities = { version = "0.7" }

diesel = { version = "2.0.3", features = ["sqlite", "r2d2", "serde_json", "chrono", "64-column-tables"] }
diesel_migrations = "2.0.0"
log = "0.4.6"
serde = "1.0.90"
thiserror = "1.0.26"
tokio = { version = "1.36", features = ["sync", "macros", "rt"] }

[dev-dependencies]
tari_test_utils = {  path = "../infrastructure/test_utils" }
