[package]
name = "tari_comms"
description = "A peer-to-peer messaging system"
authors = ["The Tari Development Community"]
repository = "https://github.com/tari-project/tari"
homepage = "https://tari.com"
readme = "README.md"
license = "BSD-3-Clause"
version = "0.2.12"
edition = "2018"

[dependencies]
tari_crypto = { version = "^0.8" }
tari_storage = { version = "^0.2", path = "../infrastructure/storage" }
tari_shutdown = { version="^0.2",  path = "../infrastructure/shutdown" }

bitflags = "1.0.4"
blake2 = "0.8.1"
bytes = { version = "0.5.x", features=["serde"] }
chrono = { version = "0.4.6", features = ["serde"] }
cidr = "0.1.0"
clear_on_drop = "=0.2.4"
data-encoding = "2.2.0"
digest = "0.8.0"
futures =  { version = "^0.3", features = ["async-await"]}
lazy_static = "1.3.0"
lmdb-zero = "0.4.4"
log = { version = "0.4.0", features = ["std"] }
multiaddr = {version = "=0.7.3", package = "parity-multiaddr"}
nom = {version = "5.1.0", features=["std"], default-features=false}
pin-project = "0.4.17"
prost = "=0.6.1"
rand = "0.7.2"
serde = "1.0.90"
serde_derive = "1.0.90"
snow = {version="=0.6.2", features=["default-resolver"]}
thiserror = "1.0.20"
tokio = {version="~0.2.19", features=["blocking", "time", "tcp", "dns", "sync", "stream", "signal"]}
tokio-util = {version="0.2.0", features=["codec"]}
tower= "0.3.1"
yamux = "=0.4.7"

# RPC dependencies
async-trait = {version="0.1.36", optional=true}
tower-make = {version="0.3.0", optional=true}
anyhow = "1.0.32"

[dev-dependencies]
tari_test_utils = {version="^0.2", path="../infrastructure/test_utils"}

env_logger = "0.7.0"
serde_json = "1.0.39"
tokio-macros = "0.2.3"
tempfile = "3.1.0"

[build-dependencies]
tari_common = { version = "^0.2", path="../common"}

[features]
avx2 = ["tari_crypto/avx2"]
rpc = ["async-trait", "tower-make"]
