[package]
name = "tari_comms"
description = "A peer-to-peer messaging system"
authors = ["The Tari Development Community"]
repository = "https://github.com/tari-project/tari"
homepage = "https://tari.com"
readme = "README.md"
license = "BSD-3-Clause"
version = "0.9.6"
edition = "2018"

[dependencies]
tari_crypto = "0.11.1"
tari_storage = { version = "^0.9", path = "../infrastructure/storage" }
tari_shutdown = { version = "^0.9", path = "../infrastructure/shutdown" }

anyhow = "1.0.32"
async-trait = "0.1.36"
bitflags = "1.0.4"
blake2 = "0.9.0"
bytes = { version = "1", features = ["serde"] }
chrono = { version = "0.4.6", features = ["serde"] }
cidr = "0.1.0"
clear_on_drop = "=0.2.4"
data-encoding = "2.2.0"
digest = "0.9.0"
futures = { version = "^0.3", features = ["async-await"] }
lazy_static = "1.3.0"
lmdb-zero = "0.4.4"
log = { version = "0.4.0", features = ["std"] }
multiaddr = { version = "0.13.0" }
nom = { version = "5.1.0", features = ["std"], default-features = false }
openssl = { version = "0.10", features = ["vendored"] }
pin-project = "1.0.8"
prost = "=0.8.0"
rand = "0.8"
serde = "1.0.119"
serde_derive = "1.0.119"
snow = { version = "=0.8.0", features = ["default-resolver"] }
thiserror = "1.0.26"
tokio = { version = "1.11", features = ["rt-multi-thread", "time", "sync", "signal", "net", "macros", "io-util"] }
tokio-stream = { version = "0.1.7", features = ["sync"] }
tokio-util = { version = "0.6.7", features = ["codec", "compat"] }
tower = "0.3.1"
tracing = "0.1.26"
tracing-futures = "0.2.5"
yamux = "=0.9.0"

# network tracing, rt-tokio for async batch export
opentelemetry = { version = "0.16", default-features = false, features = ["trace", "rt-tokio"] }
opentelemetry-jaeger = { version = "0.15", features = ["rt-tokio"] }

# RPC dependencies
tower-make = { version = "0.3.0", optional = true }

[dev-dependencies]
tari_test_utils = { version = "^0.9", path = "../infrastructure/test_utils" }
tari_comms_rpc_macros = { version = "*", path = "./rpc_macros" }

env_logger = "0.7.0"
serde_json = "1.0.39"
tempfile = "3.1.0"

[build-dependencies]
tari_common = { version = "^0.9", path = "../common", features = ["build"] }

[features]
avx2 = ["tari_crypto/avx2"]
rpc = ["tower-make"]
