[package]
name = "tari_comms"
description = "A peer-to-peer messaging system"
authors = ["The Tari Development Community"]
repository = "https://github.com/tari-project/tari"
homepage = "https://tari.com"
readme = "README.md"
license = "BSD-3-Clause"
version = "0.28.1"
edition = "2018"

[dependencies]
tari_crypto = { git = "https://github.com/tari-project/tari-crypto.git", branch = "main" }
tari_storage = { version = "^0.28", path = "../infrastructure/storage" }
tari_shutdown = { version = "^0.28", path = "../infrastructure/shutdown" }

anyhow = "1.0.53"
async-trait = "0.1.36"
bitflags = "1.0.4"
blake2 = "0.9.0"
bytes = { version = "1", features = ["serde"] }
chrono = { version = "0.4.19", default-features = false, features = ["serde"] }
cidr = "0.1.0"
clear_on_drop = "=0.2.4"
data-encoding = "2.2.0"
digest = "0.9.0"
futures = { version = "^0.3", features = ["async-await"] }
lazy_static = "1.4.0"
lmdb-zero = "0.4.4"
log = { version = "0.4.0", features = ["std"] }
log-mdc = "0.1.0"
multiaddr = { version = "0.13.0" }
nom = { version = "5.1.0", features = ["std"], default-features = false }
once_cell = "1.8.0"
openssl-sys = { version = "=0.9.66", features = ["vendored"], optional = true }
pin-project = "1.0.8"
prost = "=0.9.0"
prost-types = "0.9.0"
rand = "0.8"
serde = "1.0.119"
serde_derive = "1.0.119"
snow = { version = "=0.8.0", features = ["default-resolver"] }
thiserror = "1.0.26"
tokio = { version = "1.14", features = ["rt-multi-thread", "time", "sync", "signal", "net", "macros", "io-util"] }
tokio-stream = { version = "0.1.7", features = ["sync"] }
tokio-util = { version = "0.6.7", features = ["codec", "compat"] }
tower = {version = "0.4", features = ["util"]}
tracing = "0.1.26"
yamux = "=0.9.0"

# Metrics
tari_metrics = { path = "../infrastructure/metrics" }

[dev-dependencies]
tari_test_utils = { version = "^0.28", path = "../infrastructure/test_utils" }
tari_comms_rpc_macros = { version = "*", path = "./rpc_macros" }

env_logger = "0.7.0"
serde_json = "1.0.39"
tempfile = "3.1.0"

[build-dependencies]
tari_common = { version = "^0.28", path = "../common", features = ["build"] }

[features]
c_integration = []
avx2 = ["tari_crypto/avx2"]
metrics = []
rpc = ["tower/make", "tower/util"]
