[package]
name = "tari_hash_domains"
version = "1.0.0-rc.5"
edition = "2021"
description = "Tari hash domains"
authors = ["The Tari Development Community"]
repository = "https://github.com/tari-project/tari"
homepage = "https://tari.com"
readme = "README.md"
license = "BSD-3-Clause"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tari_crypto = "0.20.0"
