[package]
name = "tari_hashing"
version.workspace = true
edition.workspace = true
description = "Tari hash domains"
authors = ["The Tari Development Community"]
repository = "https://github.com/tari-project/tari"
homepage = "https://tari.com"
readme = "README.md"
license = "BSD-3-Clause"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tari_crypto = { workspace = true }
digest = "0.10"
borsh = "1.2"

[dev-dependencies]
blake2 = "0.10"