[package]
name = "tari_hashing"
version = "1.4.2-pre.0"
edition = "2021"
description = "Tari hash domains"
authors = ["The Tari Development Community"]
repository = "https://github.com/tari-project/tari"
homepage = "https://tari.com"
readme = "README.md"
license = "BSD-3-Clause"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tari_crypto = { version = "0.20.3", default-features = false, features = ["borsh"]}
borsh = { version = "1.2", default-features = false }
digest = { version = "0.10", default-features = false }

[dev-dependencies]
blake2 = "0.10"