[package]
name = "tari_hashing"
version = "1.7.0-pre.3"
edition = "2021"
description = "Tari hash domains"
authors = ["The Tari Development Community"]
repository = "https://github.com/tari-project/tari"
homepage = "https://tari.com"
readme = "README.md"
license = "BSD-3-Clause"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tari_crypto = { version = "0.21.0", default-features = false, features = [
    "borsh",
] }
borsh = { version = "1.5", default-features = false }
digest = { version = "0.10", default-features = false }

[dev-dependencies]
blake2 = "0.10"
