[package]
name = "taiji_integration_tests"
authors = ["The Taiji Development Community"]
repository = "https://github.com/tari-project/tari"
license = "BSD-3-Clause"
version = "0.35.1"
edition = "2018"

[dependencies]
minotaiji_app_grpc = { path = "../applications/minotaiji_app_grpc" }
minotaiji_app_utilities = { path = "../applications/minotaiji_app_utilities" }
minotaiji_node = { path = "../applications/minotaiji_node" }
minotaiji_node_grpc_client = { path = "../clients/rust/base_node_grpc_client" }
taiji_chat_client = { path = "../base_layer/contacts/examples/chat_client" }
taiji_chat_ffi = { path = "../base_layer/chat_ffi" }
tari_crypto = { version = "0.18" }
taiji_common = { path = "../common" }
taiji_common_types = { path = "../base_layer/common_types" }
taiji_comms = { path = "../comms/core" }
taiji_comms_dht = { path = "../comms/dht" }
minotaiji_console_wallet = { path = "../applications/minotaiji_console_wallet" }
taiji_contacts = { path = "../base_layer/contacts" }
taiji_core = { path = "../base_layer/core" }
minotaiji_merge_mining_proxy = { path = "../applications/minotaiji_merge_mining_proxy" }
minotaiji_miner = { path = "../applications/minotaiji_miner" }
taiji_p2p = { path = "../base_layer/p2p" }
taiji_script = { path = "../infrastructure/taiji_script" }
taiji_shutdown = { path = "../infrastructure/shutdown" }
tari_utilities = { version = "0.5" }
minotaiji_wallet = { path = "../base_layer/wallet" }
minotaiji_wallet_ffi = { path = "../base_layer/wallet_ffi" }
minotaiji_wallet_grpc_client = { path = "../clients/rust/wallet_grpc_client" }

anyhow = "1.0.53"
async-trait = "0.1.50"
chrono = { version = "0.4.22", default-features = false }
config = "0.13.0"
csv = "1.1"
cucumber = { version = "0.18.0", features = ["default", "libtest", "output-junit"] }
futures = { version = "^0.3.1" }
indexmap = "1.9.1"
libc = "0.2.65"
log = { version = "0.4.8", features = ["std"] }
rand = "0.8"
reqwest = "0.11.11"
serde_json = "1.0.64"
tempfile = "3.3.0"
thiserror = "^1.0.20"
time = "0.3.15"
tokio = { version = "1.10", features = ["macros", "time", "sync", "rt-multi-thread"] }
tonic = "0.6.2"

[package.metadata.cargo-machete]
ignored = ["minotaiji_wallet_ffi", "taiji_chat_ffi"]

[[test]]
name = "cucumber" # this should be the same as the filename of your test target
harness = false # allows Cucumber to print output instead of libtest

