[package]
name = "tari_integration_tests"
authors = ["The Tari Development Community"]
repository = "https://github.com/tari-project/tari"
license = "BSD-3-Clause"
version = "0.35.1"
edition = "2018"

[dependencies]
minotari_app_grpc = { path = "../applications/minotari_app_grpc" }
minotari_app_utilities = { path = "../applications/minotari_app_utilities" }
minotari_node = { path = "../applications/minotari_node", features = ["metrics"] }
minotari_node_grpc_client = { path = "../clients/rust/base_node_grpc_client" }
tari_chat_client = { path = "../base_layer/contacts/src/chat_client" }
minotari_chat_ffi = { path = "../base_layer/chat_ffi" }
tari_crypto = { version = "0.20" }
tari_common = { path = "../common" }
tari_common_types = { path = "../base_layer/common_types" }
tari_comms = { path = "../comms/core" }
tari_comms_dht = { path = "../comms/dht" }
minotari_console_wallet = { path = "../applications/minotari_console_wallet", features = ["grpc"] }
tari_contacts = { path = "../base_layer/contacts" }
tari_core = { path = "../base_layer/core" }
minotari_merge_mining_proxy = { path = "../applications/minotari_merge_mining_proxy" }
minotari_miner = { path = "../applications/minotari_miner" }
tari_p2p = { path = "../base_layer/p2p" }
tari_script = { path = "../infrastructure/tari_script" }
tari_shutdown = { path = "../infrastructure/shutdown" }
tari_utilities = { version = "0.7" }
minotari_wallet = { path = "../base_layer/wallet" }
minotari_wallet_ffi = { path = "../base_layer/wallet_ffi" }
minotari_wallet_grpc_client = { path = "../clients/rust/wallet_grpc_client" }
tari_key_manager = { path = "../base_layer/key_manager" }

anyhow = "1.0.53"
async-trait = "0.1.50"
chrono = { version = "0.4.22", default-features = false }
config = "0.14.0"
csv = "1.1"
cucumber = { version = "0.20.0", features = ["default", "libtest", "output-junit"] }
futures = { version = "^0.3.1" }
indexmap = "1.9.1"
libc = "0.2.65"
log = { version = "0.4.8", features = ["std"] }
rand = "0.8"
reqwest = "0.11.11"
serde_json = "1.0.64"
tempfile = "3.3.0"
thiserror = "^1.0.20"
time = "0.3.15"
tokio = { version = "1.36", features = ["macros", "time", "sync", "rt-multi-thread"] }
tonic = "0.8.3"

[package.metadata.cargo-machete]
ignored = ["minotari_wallet_ffi", "minotari_chat_ffi"]

[[test]]
name = "cucumber" # this should be the same as the filename of your test target
harness = false # allows Cucumber to print output instead of libtest

