[package]
name = "tari_integration_tests"
authors = ["The Tari Development Community"]
repository = "https://github.com/tari-project/tari"
license = "BSD-3-Clause"
version.workspace = true
edition.workspace = true

[dependencies]
minotari_app_grpc = { workspace = true }
minotari_app_utilities = { workspace = true }
minotari_node = { workspace = true, features = ["metrics"] }
minotari_node_grpc_client = { workspace = true }
tari_chat_client = { workspace = true }
minotari_chat_ffi = { workspace = true }
tari_crypto = { workspace = true }
tari_common = { workspace = true }
tari_common_types = { workspace = true }
tari_comms = { workspace = true }
tari_comms_dht = { workspace = true }
minotari_console_wallet = { workspace = true, features = ["grpc"] }
tari_contacts = { workspace = true }
tari_core = { workspace = true }
minotari_merge_mining_proxy = { workspace = true }
minotari_miner = { workspace = true }
tari_p2p = { workspace = true }
tari_script = { workspace = true }
tari_shutdown = { workspace = true }
tari_utilities = { workspace = true }
minotari_wallet = { workspace = true }
minotari_wallet_ffi = { workspace = true }
minotari_wallet_grpc_client = { workspace = true }
tari_key_manager = { workspace = true }

anyhow = "1.0.53"
async-trait = "0.1.50"
chrono = { version = "0.4.22", default-features = false }
config = "0.13.0"
csv = "1.1"
cucumber = { version = "0.20.0", features = ["default", "libtest", "output-junit"] }
futures = { version = "^0.3.1" }
indexmap = "1.9.1"
libc = "0.2.65"
log = { version = "0.4.8", features = ["std"] }
rand = "0.8"
reqwest = "0.11.11"
serde_json = "1.0.64"
tempfile = "3.3.0"
thiserror = "^1.0.20"
time = "0.3.15"
tokio = { version = "1.36", features = ["macros", "time", "sync", "rt-multi-thread"] }
tonic = "0.8.3"

[package.metadata.cargo-machete]
ignored = ["minotari_wallet_ffi", "minotari_chat_ffi"]

[[test]]
name = "cucumber" # this should be the same as the filename of your test target
harness = false # allows Cucumber to print output instead of libtest

