[package]
name = "minotaiji_merge_mining_proxy"
authors = ["The Taiji Development Community"]
description = "The Taiji merge mining proxy for xmrig"
repository = "https://github.com/tari-project/tari"
license = "BSD-3-Clause"
version = "0.52.0-pre.0"
edition = "2018"

[features]
default = []

[dependencies]
taiji_common = { path = "../../common" }
taiji_comms = { path = "../../comms/core" }
taiji_core = { path = "../../base_layer/core", default-features = false, features = ["transactions"] }
minotaiji_app_utilities = { path = "../minotaiji_app_utilities" }
tari_utilities = { version = "0.5" }
minotaiji_node_grpc_client = {path="../../clients/rust/base_node_grpc_client" }
minotaiji_wallet_grpc_client = {path="../../clients/rust/wallet_grpc_client" }

anyhow = "1.0.53"
crossterm = { version = "0.25.0" }
bincode = "1.3.1"
borsh = "0.10"
bytes = "1.1"
chrono = { version = "0.4.6", default-features = false }
clap = { version = "3.2", features = ["derive", "env"] }
config = { version = "0.13.0" }
futures = "0.3.5"
hex = "0.4.2"
hyper = "0.14.12"
jsonrpc = "0.12.0"
log = { version = "0.4.8", features = ["std"] }
reqwest = { version = "0.11.4", features = ["json"] }
serde = { version = "1.0.106", features = ["derive"] }
serde_json = "1.0.57"
thiserror = "1.0.26"
tokio = { version = "1.23", features = ["macros"] }
tonic = "0.6.2"
tracing = "0.1"
url = "2.1.1"

[build-dependencies]
taiji_features = { path = "../../common/taiji_features"}
