[package]
name = "minotaiji_node"
authors = ["The Taiji Development Community"]
description = "The taiji full base node implementation"
repository = "https://github.com/tari-project/tari"
license = "BSD-3-Clause"
version = "0.52.0-pre.0"
edition = "2018"

[dependencies]
minotaiji_app_grpc = { path = "../minotaiji_app_grpc" }
minotaiji_app_utilities = { path = "../minotaiji_app_utilities" }
taiji_common = { path = "../../common" }
taiji_comms = { path = "../../comms/core", features = ["rpc"] }
taiji_common_types = { path = "../../base_layer/common_types" }
taiji_comms_dht = { path = "../../comms/dht" }
taiji_core = { path = "../../base_layer/core", default-features = false, features = ["transactions"] }
tari_crypto = { version = "0.18" }
taiji_libtor = { path = "../../infrastructure/libtor", optional = true }
taiji_p2p = { path = "../../base_layer/p2p", features = ["auto-update"] }
taiji_storage = {path="../../infrastructure/storage"}
taiji_service_framework = { path = "../../base_layer/service_framework" }
taiji_shutdown = { path = "../../infrastructure/shutdown" }
tari_utilities = { version = "0.5" }

anyhow = "1.0.53"
async-trait = "0.1.52"
bincode = "1.3.1"
borsh = "0.10"
chrono = { version = "0.4.19", default-features = false }
clap = { version = "3.2", features = ["derive", "env"] }
console-subscriber = "0.1.8"
config = { version = "0.13.0" }
crossterm = { version = "0.23.1", features = ["event-stream"] }
derive_more = "0.99.17"
either = "1.6.1"
futures = { version = "^0.3.16", default-features = false, features = ["alloc"] }
qrcode = { version = "0.12" }
log = { version = "0.4.8", features = ["std"] }
log-mdc = "0.1.0"
log4rs = { git = "https://github.com/tari-project/log4rs.git", default_features = false, features = ["config_parsing", "threshold_filter", "yaml_format", "console_appender", "rolling_file_appender", "compound_policy", "size_trigger", "fixed_window_roller"] }
nom = "7.1"
rustyline = "9.0"
rustyline-derive = "0.5"
serde = "1.0.136"
strum = { version = "0.22", features = ["derive"] }
thiserror = "^1.0.26"
tokio = { version = "1.23", features = ["signal"] }
tonic = "0.6.2"

# Metrics
taiji_metrics = { path = "../../infrastructure/metrics", optional = true, features = ["server"] }

[features]
default = ["metrics"]
metrics = ["taiji_metrics", "taiji_comms/metrics"]
safe = []
libtor = ["taiji_libtor"]

[build-dependencies]
taiji_features = { path = "../../common/taiji_features"}

[package.metadata.cargo-machete]
ignored = [
    # We need to specify extra features for log4rs even though it is not used directly in this crate
    "log4rs"
]
